tdf#102852 Fixed BreakDlg

Needed to ensure correct return value in dialog
and that it repaints

Change-Id: I029d10b6699629b2f2f8651f6d96ceceba7a3d8c
Reviewed-on: https://gerrit.libreoffice.org/29401
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>